add column class
